--- a/QuickNotes/app/build.gradle
+++ b/QuickNotes/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    repositories {
+        maven { url "http://maven.csse.rose-hulman.edu/artifactory/libs-release" }
+    }
 }
 
 dependencies {
@@ -34,6 +38,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.android.gms:play-services-auth:10.0.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
+    compile 'edu.rosehulman.csse.rosefire:rosefire-android-client:2.1.0'
     testCompile 'junit:junit:4.12'
 }
 
