--- a/QuickNotes/app/src/main/AndroidManifest.xml
+++ b/QuickNotes/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -24,6 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".utilities.AlarmService"
+            android:enabled="true" />
+        <receiver
+            android:process=":remote"
+            android:name=".utilities.AlarmReceiver">
+        </receiver>
     </application>
-
 </manifest>
